fixed text color under dark mode

--- a/src/main/resources/edu/wpi/punchy_pegasi/frontend/css/PathfindingMap.css
+++ b/src/main/resources/edu/wpi/punchy_pegasi/frontend/css/PathfindingMap.css
@@ -33,9 +33,7 @@
     -fx-effect: dropshadow(gaussian, rgba(0, 0, 0, 0.40), 20, 0, 0.0, 0.0);
 }
 
-.pathfinding-direction-box:hover {
-    -fx-background-color: -pfx-background-transparent;
-}
+
 
 /*.pathfinding-direction-box > HBox {*/
 /*    -fx-spacing: 10;*/
@@ -69,6 +67,23 @@
     -fx-spacing: 10;
     -fx-padding: 20;
     -fx-max-height: 500;
+}
+.pathfinding-direction-overlay Label {
+    -fx-text-fill: -pfx-text;
+}
+
+.pathfinding-direction-overlay PFXIcon {
+    -fx-fill: -pfx-text;
+}
+
+.pathfinding-direction-box:hover {
+    -fx-background-color: -pfx-background-transparent;
+}
+.pathfinding-direction-box:hover Label {
+    -fx-text-fill: black;
+}
+.pathfinding-direction-box:hover PFXIcon {
+    -fx-fill: black;
 }
 
 .pathfinding-overlay .pfx-button {
